--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -69,5 +69,14 @@
         app:layout_constraintBottom_toBottomOf="@id/likeButton"
         android:layout_marginStart="6dp"
         />
+    <ImageView
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:id="@+id/commentButton"
+        app:layout_constraintLeft_toRightOf="@id/likeButton"
+        app:layout_constraintTop_toBottomOf="@id/postTitle"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/ic_comment"
+        android:layout_marginLeft="20dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
