--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".SignInActivity">
+    tools:context=".activities.SignInActivity">
     <androidx.constraintlayout.utils.widget.ImageFilterView
         android:id="@+id/googleImage"
         android:layout_width="100dp"
