--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -78,5 +78,14 @@
         android:layout_marginTop="16dp"
         android:src="@drawable/ic_comment"
         android:layout_marginLeft="20dp"/>
+    <TextView
+        android:id="@+id/commentCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toRightOf="@id/commentButton"
+        app:layout_constraintTop_toBottomOf="@id/postTitle"
+        android:layout_marginStart="6dp"
+        android:textColor="#212121"
+        android:layout_marginTop="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
